# hog-c2

./: .env.example  .gitignore  LICENSE  README.md  SETUP_GUIDE.md  build.ps1  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
scripts/: build.ps1  build.sh  inspect-notion-page.js
src/: App.tsx  gui.py  index.css  logic.py  main.py  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_cli.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/models/: app_limit.rs  app_usage.rs  mod.rs  system_info.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  process_control.rs  windows.rs
src-tauri/src/services/: mod.rs  notion.rs  tracking.rs
src/components/: Dashboard.tsx  Settings.tsx  TaskList.tsx  TitleBar.tsx
src/utils/: tauri.ts
